@@ -24,6 +24,7 @@ all-features = true
 
 [dependencies]
 image = { version = "0.25.4", default-features = false, optional = true }
+unicode-ident = "1.0.13"
 
 [dev-dependencies]
 anyhow = "1.0.90"
